--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -156,7 +156,8 @@ Format: `add task tn/_insert task here_ td/ _insert date here_`
 
 [NOTE]
 ====
-When entering the date for a task, please follow the given format: day/month/year
+Task name entered should not exceed 30 characters.
+When entering the date for a task, please follow the given format: day/month/year.
 ====
 
 Example usage (Figure 3.3.2a & 3.3.3b): `add task tn/Bake CupCakes td/11/11/2019`
