--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -362,14 +362,14 @@ Examples:
 `undo` +
 Undoes the add command, i.e. the engagement with the description `CS2103T Discussion` will no longer be in the appointment manager.
 
-* `delete 1` +
+* `delete i/1` +
 `undo` +
 Undoes the delete command, i.e. restores the first engagement in the original displayed list.
 
 [.float-group]
 [.clearfix]
 --
-.Engagement list before the command `delete 1`
+.Engagement list before the command `delete i/1`
 image::after-list.png[width="450", float="left"]
 [.left]
 .Engagement list after deletion
@@ -385,9 +385,9 @@ Format: `redo`
 
 Examples:
 
-* `delete 1` +
-`undo` (reverts the `delete 1` command) +
-`redo` (reapplies the `delete 1` command) +
+* `delete i/1` +
+`undo` (reverts the `delete i/1` command) +
+`redo` (reapplies the `delete i/1` command) +
 
 Redoes the previous undo command, i.e. the appointment deleted before `undo` will be removed again from the appointment manager.
 
